bug fix switch icon align

--- a/src/components/Switch/index.less
+++ b/src/components/Switch/index.less
@@ -4,6 +4,10 @@
   height: 18px;
   cursor: default;
 
+  :global(.ant-switch-handle) {
+    height: 13px;
+  }
+
   :global(.ant-switch-handle::before) {
     top: 1px;
   }
